CSS van vue naar CSCC bestanden & checkbox bug
Former-commit-id: 91fd86c4d27f3d8ab7d48564787bed32a7196e20

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -53,115 +53,10 @@
 
 
 
-/* DEFAULTS */
-a {outline: none !important;}
-a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
 
-/* LOGIN */
-#login-form {width:20rem;margin:20% auto;box-shadow:0 0 1.25rem $gray-dark;}
-#login-form h1 {text-transform:none;}
+/* FLEXYADMIN */
 
-/* HEADER & FOOTER */
-#header, #footer {
-  padding-top:0px;
-  padding-bottom:0px;
-  background-color:$gray-lightest;
-}
-#header {border-bottom:solid 1px $gray-lighter;height:$font-size-root*3.25;}
-#footer {border-top:solid 1px $gray-lighter;min-height:$font-size-root*3.25;}
-#header .nav, #footer .nav {float:right;padding-top:.45rem;}
-
-/* CONTENT */
-#content {margin:1rem 0px;}
-#flexy-menu-side {padding-left:0;}
-#main {padding-right:.5rem;}
-
-/* PROGRESS */
-#header .progress {margin:0;height:2px;border-radius:0;}
-
-/* MESSAGES */
-#messages {
-  width:100%;
-  margin-top:$font-size-root*4;
-}
-
-/* SIDEBAR MENU */
-#flexy-menu-side > ul {
-  background-color: $gray-lightest;
-  border:solid 1px $gray-lighter;
-  margin-bottom:1rem;
-  border-radius:.25rem;
-}
-.nav-pills .nav-link {
-  padding:.45rem .5rem;
-  text-transform: uppercase;
-  white-space:nowrap;
-  overflow:hidden;
-  text-overflow: ellipsis;
-}
-.nav-pills .nav-link.active {background-color: $brand-primary; color: $body-bg!important;}
-.nav-pills .nav-link:not(.active):hover, .nav-pills .nav-link:not(.active):focus {background-color: $gray-lighter; color: $brand-primary!important;}
-
-/* Buttons */
-.btn-default {background-color:$body-bg;color:$brand-primary;}
-.btn-default:hover {background-color:$brand-info;color:$body-bg;}
-
-
-/* HELP */
-.flexy-help {
-  display:none;
-  position:fixed;
-  top:0;
-  right:0;
-  width:25%;
-  height:100%;
-  box-shadow:0 0 .5rem $gray-dark;
-  z-index:9999;
-}
-.flexy-help>.card {height:100%;}
-
-/* MAIN > CARD */
-#main > .card {border:solid 1px $brand-primary;}
-#main > .card > .card-header {background-color:$brand-primary;color:$body-bg;padding:.5rem;}
-.card > .card-header > * {margin:0 1rem 0 0;float:left;}
-.card > .card-header > *:last-child {margin:0;float:right;}
-.card > .card-header .btn {text-transform:uppercase};
-
-/* TABS */
-.nav-tabs>li>a.nav-link {text-transform:uppercase;}
-
-/* FORM */
-.form-group.row:not(.has-danger):hover input {border-color:$brand-primary};
-.card.form .form-group.row:hover {border-radius:$border-radius;background-color:$gray-lighter;}
-
-/* SORTABLE */
-.sortable-chosen, .sortable-fallback {
-  background-color:$gray-lightest;
-  box-shadow:0 0 .5rem $gray-dark;
-}
-
-/* GRID / MEDIA */
-.media-thumb-sm {height:1.75rem;border-radius:$border-radius/2;}
-.grid .grid-relation-item {border:solid 1px $gray-lighter;border-radius:$border-radius;padding:.15rem .35rem;margin-right:.25rem;}
-
-
-/* TRANSITIONS */
-.slideUp-enter-active {transition: all .2s ease;}
-.slideUp-leave-active {transition: all 1s ease;}
-.slideUp-enter, .slideUp-leave-active {margin-top: -$font-size-root*4;opacity: 0;}
-
-
-/* DEBUG HELPERS */
-.debug-info .card-block {
-  padding:0;
-  max-height:30rem;
-  background-color:#666;
-  overflow:auto;
-}
-._trace {
-  background-color:#FFF;
-  display:block;
-  font-family:monospace;
-  padding:.5rem;
-  margin:.5rem;
-}
+@import "_defaults";
+@import "_layout";
+@import "_grid";
+@import "_form";
