--- a/sys/flexyadmin/assets/scss/_layout.scss
+++ b/sys/flexyadmin/assets/scss/_layout.scss
@@ -16,13 +16,17 @@
 }
 
 /* MESSAGES */
-#messages {width:100%;margin-top:$font-size-root*4;}
+#messages {
+  position:fixed;
+  bottom:0px;
+  margin-bottom:0px;
+}
 .message-text {width:90%;}
 .message-button {float:right;margin-top:-.25rem;}
 
 
 /* CONTENT */
-#content {margin:1rem 0px;}
+#content {margin:$font-size-root*4 0px 0px;}
 #flexy-menu-side {padding-left:0;}
 #main {padding-right:.5rem;}
 
@@ -45,6 +49,24 @@
   box-shadow:0 0 .5rem $gray-dark;
   z-index:9999;
   >.card {height:100%;}
+}
+
+/* MASK */
+#mask {
+  position:fixed;
+  top:0;left:0;
+  width:100%;
+  height:100%;
+  background-color:transparent;
+  z-index:999999;
+  .spinner {
+    position:absolute;
+    left:50%;
+    top:50%;
+    font-size:5rem;
+    color:$brand-primary;
+//    text-shadow:0px 0px .5rem $gray;
+  }
 }
 
 /* MAIN > CARD */
