Basic styling overrides tinyMCE
Former-commit-id: ba13681251f464b3b3797fad2cf9907834b4eef1

--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -12,7 +12,7 @@
 
 // Input Border color
 .form-group.row:not(.has-danger):hover {
-  input,select,textarea {
+  input,select,textarea,.mce-tinymce {
     border-color:$brand-primary
   };
 }
@@ -45,4 +45,12 @@ textarea {
   font-weight:bold;
 }
 
+// tinyMCE overrides
+.mce-tinymce {
+  border-radius:$border-radius;
+}
+body.mce-fullscreen .mce-tinymce{
+  z-index:9999999;
+//  margin-top:$font-size-root*4!important;
+}
 
