BUG: grid-cell defaulttype did noy exclude relation types & some styling
Former-commit-id: aecdc0ddd82f27c54894ccf635945266b021f518

--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -16,6 +16,7 @@
     padding:.15rem .35rem;
     margin-right:.25rem;
   }
+  .grid-relation-item:hover {border-color:$brand-primary;background-color:lighten($brand-warning,40%);};
   
   // Thumb
   .color-thumb-sm {
