--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -12,10 +12,15 @@
 
 // Input Border color
 .form-group.row:not(.has-danger):hover {
-  input,select,textarea,.mce-tinymce {
-    border-color:$brand-primary
+  input, select, textarea, .mce-tinymce, .form-control:focus {
+    border-color:$brand-primary;
   };
 }
+.form-control:focus {
+  border-color:$brand-primary;
+}
+
+
 
 // Background row
 .card.form {
@@ -28,11 +33,6 @@
 // Sizes
 .form {
   .form-group {min-height:2.35rem;}
-}
-
-textarea {
-  min-height:5rem;
-  max-height:30rem;
 }
 
 select.form-control:not([size]):not([multiple]) {
@@ -49,6 +49,13 @@ select.form-control:not([size]):not([multiple]) {
   font-weight:bold;
 }
 
+// FIELDS
+
+textarea {
+  min-height:5rem;
+  max-height:30rem;
+}
+
 // tinyMCE overrides
 .mce-tinymce {
   border-radius:$border-radius;
@@ -56,4 +63,33 @@ select.form-control:not([size]):not([multiple]) {
 body.mce-fullscreen .mce-tinymce{
   z-index:9999999;
 //  margin-top:$font-size-root*4!important;
+}
+
+// DatePicker overrides
+.form-control.datepicker-input {
+  width:7rem;
+}
+.datepicker-popup {
+  border-color:$brand-primary!important;
+  background: $body-bg!important;
+  box-shadow: 0 .5rem 1rem $gray!important;
+}
+.decadeRange span:first-child,
+.decadeRange span:last-child,
+.datepicker-item-disable,
+.datepicker-item-gray {
+  color:$gray-light!important;
+}
+.datepicker-dateRange-item-active:hover,
+.datepicker-dateRange-item-active {
+  background-color: $brand-primary!important;
+}
+.datepicker-prevBtn:hover,
+.datepicker-nextBtn:hover,
+.datepicker-monthRange span:hover,
+.datepicker-ctrl p:hover,
+.datepicker-ctrl i:hover,
+.datepicker-dateRange span:hover,
+.datepicker-dateRange-item-hover {
+  background: $brand-warning!important;
 }
