Grafische puntjes (Arnoud)
Former-commit-id: 104c460e262667b20caa9559a4abb4858d0d92b1

--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -92,7 +92,7 @@
      }
      span {
        white-space:nowrap;
-       text-transform:uppercase;
+//       text-transform:uppercase;
      }
      >span.fa {
        position:relative;
