--- a/sys/flexyadmin/assets/scss/_defaults.scss
+++ b/sys/flexyadmin/assets/scss/_defaults.scss
@@ -10,7 +10,8 @@ h1 {text-transform:uppercase;}
 .nav-pills {
   .nav-link {
     padding:.45rem .5rem;
-    text-transform: uppercase;
+    font-size:1.15rem;
+//    text-transform: uppercase;
     white-space:nowrap;
     overflow:hidden;
     text-overflow: ellipsis;
