Some bugs (POST) en styling
Former-commit-id: be06c94d7169a3858256c15d83380ccfe00d01b8

--- a/sys/flexyadmin/assets/scss/_defaults.scss
+++ b/sys/flexyadmin/assets/scss/_defaults.scss
@@ -1,6 +1,6 @@
 a {outline: none !important;}
 a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
-h1 {text-transform:uppercase;}
+//h1 {text-transform:uppercase;}
 
 /* BTN */
 .btn-default {background-color:$body-bg;color:$brand-primary;}
