--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -3,7 +3,7 @@
   
   // GENERAL
   option, select {
-    text-transform:uppercase;
+//    text-transform:uppercase;
   }
   // Table cells Focus/Editing
   td.has-focus {background-color:lighten($brand-warning,40%);}
