--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -61,9 +61,23 @@
      input#browsefiles {
        display:none;
      }
+     .grid-upload-choose {
+       color:$gray;
+       .flexy-button {margin-right:1rem;float:left;}
+     }
+     .grid-upload-dropbox {
+       color:$gray;
+       border:dashed 3px $gray-light;
+       border-radius:$border-radius;
+       padding:.5rem 1.1rem;
+     }
      progress {
        margin:0;
        height:1.5rem;
+     }
+     table {
+       margin:.8rem;
+       thead .flexy-button {margin-right:1rem;}
      }
      tr {
        th {color:$brand-primary;}
