Colorpicker & bug colors in grid

--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -99,3 +99,9 @@ body.mce-fullscreen .mce-tinymce{
 .datepicker-dateRange-item-hover {
   background: $brand-warning!important;
 }
+
+// Colorpicker
+.colorpicker {
+  padding:0;
+  width:2rem;
+}
