--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -20,8 +20,12 @@
   
   // Thumb
   .color-thumb-sm {
+    width:5.5rem;
     padding:0.125rem .5rem;
     margin:0;
+    text-align:center;
+    text-transform:uppercase;
+    border-radius:$border-radius;
   }
   
   
@@ -146,6 +150,7 @@
      max-width:250px;
      input {padding:0;float:left;}
    }
+   td.grid-cell-type-color {max-width:0;}
    td.grid-cell-type-checkbox {text-align:center;}
    
    // FOOTER
