--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -56,6 +56,11 @@ textarea {
   max-height:30rem;
 }
 
+//select.form-control {
+//  width:auto;
+//  max-width:100%;
+//}
+
 .custom-select {
   height: calc(2.5rem - 1px);
 }
@@ -98,10 +103,4 @@ body.mce-fullscreen .mce-tinymce{
 .datepicker-dateRange span:hover,
 .datepicker-dateRange-item-hover {
   background: $brand-warning!important;
-}
-
-// Colorpicker
-.colorpicker {
-  padding:0;
-  width:2rem;
 }
