--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -150,7 +150,7 @@
      max-width:250px;
      input {padding:0;float:left;}
    }
-   td.grid-cell-type-color {max-width:0;}
+   td.grid-cell-type-color {max-width:0;min-width:5rem;}
    td.grid-cell-type-checkbox {text-align:center;}
    
    // FOOTER
