--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -60,33 +60,32 @@
    
    // Upload Block
    .card-block.grid-upload {
-     padding: 1rem .5rem;
+     padding:.5rem;
+     border-bottom:1px solid $brand-primary;
      background-color:$gray-lightest;
      input#browsefiles {
        display:none;
      }
-     .grid-upload-choose {
-       color:$gray;
-       .flexy-button {margin-right:1rem;float:left;}
-     }
      .grid-upload-dropbox {
        color:$gray;
-       border:dashed 3px $gray-light;
+       border:dashed 2px $gray-lighter;
        border-radius:$border-radius;
-       padding:.5rem 1.1rem;
+       padding:.5rem;
+       .flexy-button {margin-right:1rem;float:left;}
      }
      progress {
        margin:0;
        height:1.5rem;
      }
      table {
-       margin:.8rem;
+       margin-top:.5rem;
        thead .flexy-button {margin-right:1rem;}
      }
      tr {
-       th {color:$brand-primary;}
-       th:last-child,
-       td:last-child {text-align:right;}
+       th {color:$brand-primary;vertical-align:top;}
+       th:first-child, td:first-child {padding-left:.65rem;}
+       th:last-child, td:last-child {text-align:right;}
+       
      }
    }
    
