Grid: small bugs & styling

--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -97,6 +97,7 @@
      text-overflow:
      ellipsis;
      white-space:nowrap;
+     cursor:pointer;
      >* {
        display:inline-block;
        position:relative;
