Showing media in grid & form

--- a/sys/flexyadmin/assets/scss/_defaults.scss
+++ b/sys/flexyadmin/assets/scss/_defaults.scss
@@ -21,9 +21,9 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
 }
 
 /* TABS */
-.nav-tabs {
-   >li>a.nav-link {text-transform:uppercase;}
-}
+//.nav-tabs {
+//   >li>a.nav-link {text-transform:uppercase;}
+//}
 
 /* PAGINATION */
 .pagination-container {
