--- a/sys/flexyadmin/assets/scss/_defaults.scss
+++ b/sys/flexyadmin/assets/scss/_defaults.scss
@@ -1,6 +1,5 @@
 a {outline: none !important;}
 a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
-//h1 {text-transform:uppercase;}
 
 /* BTN */
 .btn-default {background-color:$body-bg;color:$brand-primary;}
@@ -11,7 +10,6 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
   .nav-link {
     padding:.45rem .5rem;
     font-size:1.15rem;
-//    text-transform: uppercase;
     white-space:nowrap;
     overflow:hidden;
     text-overflow: ellipsis;
@@ -19,11 +17,6 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
   .nav-link.active {background-color: $brand-primary; color: $body-bg!important;}
   .nav-link:not(.active):hover, .nav-link:not(.active):focus {background-color: $gray-lighter; color: $brand-primary!important;}
 }
-
-/* TABS */
-//.nav-tabs {
-//   >li>a.nav-link {text-transform:uppercase;}
-//}
 
 /* PAGINATION */
 .pagination-container {
@@ -50,7 +43,12 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
 
 /* CARD */
 .card {
+  margin:0;
+  border:solid 1px $brand-primary;
   >.card-header {
+    background-color:$brand-primary;
+    color:$body-bg;
+    padding:.5rem;
     >* {margin:0 1rem 0 0;float:left;}
     >*:last-child {margin:0;float:right;}
     >*:first-child {margin:0;float:left;}
