Upload dropbox styling
Former-commit-id: a33cc88e9d7ac69d02bdaf3485e578777b4e5758

--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -115,6 +115,7 @@ body.mce-fullscreen .mce-tinymce{
     >.flexy-button {
       float:left;
       margin-right:.5rem;
+      margin-top:3.25rem;
     }
     .mediapicker-thumb {
       display:inline;
