--- a/sys/flexyadmin/assets/scss/_layout.scss
+++ b/sys/flexyadmin/assets/scss/_layout.scss
@@ -67,8 +67,8 @@
     left:50%;
     top:50%;
     font-size:5rem;
-    color:$brand-primary;
-//    text-shadow:0px 0px .5rem $gray;
+    color:$brand-warning;
+    text-shadow:0px 0px .5rem $gray;
   }
 }
 
