Some small styling & version showing
Former-commit-id: f7890211cc14761717492c5ab559f5c1b3402d5e

--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -11,9 +11,11 @@
 }
 
 // Input Border color
-input, select, textarea, .mce-tinymce, .form-control, .mediapicker {
-  border-color:$gray-light!important;
-};
+.form-group.row {
+  input, select, textarea, .mce-tinymce, .form-control, .mediapicker {
+    border-color:$gray-light!important;
+  };
+}
 
 .form-group.row:not(.has-danger):hover {
   label {color:$brand-primary;}
