Admin_Ui menu ready
Former-commit-id: ad2b7456717e1fe13a188fcea4ab12c01d845b2d

--- a/sys/flexyadmin/assets/scss/_defaults.scss
+++ b/sys/flexyadmin/assets/scss/_defaults.scss
@@ -17,6 +17,9 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
   .nav-link.active {background-color: $brand-primary; color: $body-bg!important;}
   .nav-link:not(.active):hover, .nav-link:not(.active):focus {background-color: $gray-lighter; color: $brand-primary!important;}
 }
+.nav-item.seperator {
+  border-top:solid 2px $gray-lighter;
+}
 
 /* PAGINATION */
 .pagination-container {
