FlexyAdmin: styling bug voor medias
Former-commit-id: 43f1732bf323fd9f720ddbf8dee2bb59ccdcdfe6

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -1167,7 +1167,7 @@ body.normal_dropdowns select.image_dropdown {margin-top:0px;}
 .flexyFormField.fieldtype_medias {min-height:132px;}
 body.normal_dropdowns .flexyFormField.fieldtype_medias {
 /*  float:left;*/
-  height:200px;
+  min-height:200px;
 }
 
 .flexyFormField .flash,
