--- a/sys/flexyadmin/assets/scss/_defaults.scss
+++ b/sys/flexyadmin/assets/scss/_defaults.scss
@@ -14,8 +14,15 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
     overflow:hidden;
     text-overflow: ellipsis;
   }
-  .nav-link.active {background-color: $brand-primary; color: $body-bg!important;}
-  .nav-link:not(.active):hover, .nav-link:not(.active):focus {background-color: $gray-lighter; color: $brand-primary!important;}
+  .nav-link.active {
+    background-color: $brand-primary;
+    color: $body-bg!important;
+  }
+  .nav-link:not(.active):hover,
+  .nav-link:not(.active):focus {
+    background-color: $gray-lighter;
+    color: $brand-primary!important;
+  }
 }
 .nav-item.seperator {
   border-top:solid 2px $gray-lighter;
