--- a/sys/flexyadmin/assets/scss/_layout.scss
+++ b/sys/flexyadmin/assets/scss/_layout.scss
@@ -9,15 +9,15 @@
   h1 {text-transform:none;}
 }
 
+.progress {position:absolute;margin:0;height:2px;border-radius:0;width:100%;}
+
 /* HEADER */
 #header {
-  padding-top:0px;
-  padding-bottom:0px;
+  padding:0 .5rem 0 0;
   background-color:$gray-lightest;
   border-bottom:solid 1px $gray-lighter;
   height:$font-size-root*3.25;
-  .nav {float:right;padding-top:.45rem;}
-  .progress {margin:0;height:2px;border-radius:0;}
+  .nav {padding-top:.1rem;}
 }
 
 /* MESSAGES */
@@ -34,7 +34,9 @@
 
 
 /* CONTENT */
-#content {margin:$font-size-root*4 0px 0px;}
+#content {
+  margin:1rem 0px 0px;
+}
 #flexy-menu-side {padding-left:0;}
 #main {
   padding-right:.5rem;
