--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -40,10 +40,10 @@
 }
 
 select.form-control:not([size]):not([multiple]) {
-  height:auto;
+//  height:auto;
 }
 .custom-select {
-  height: 2.13rem;
+  height: 2.13rem!important;
   padding-top:0.5rem;
 }
 
@@ -52,9 +52,17 @@ select.form-control:not([size]):not([multiple]) {
 //  margin-top:.75rem;
 }
 
+// Validation
+.form-group.has-danger {
+  background-color:lighten($brand-warning,30%)!important;
+}
+
 .validation-error {
-  padding:.25rem 1rem;
+  display:inline-block;
+  width:100%;
+  background-color:lighten($brand-warning,30%);
   font-weight:bold;
+  padding:.25rem 1rem;
 }
 
 // FIELDS
@@ -63,11 +71,6 @@ textarea {
   min-height:5rem;
   max-height:30rem;
 }
-
-//select.form-control {
-//  width:auto;
-//  max-width:100%;
-//}
 
 // tinyMCE overrides
 .mce-tinymce {
