--- a/sys/flexyadmin/assets/scss/_layout.scss
+++ b/sys/flexyadmin/assets/scss/_layout.scss
@@ -35,8 +35,13 @@
 
 /* MESSAGES */
 #messages {
-  top:-1px;
+  position:fixed;
+  left:0px;
+  top:0px;
   max-height:100%;
+  width:100%;
+  padding:0;
+  margin:0;
   overflow:auto;
   opacity:.9;
   z-index:99999999;
