--- a/sys/flexyadmin/assets/scss/_layout.scss
+++ b/sys/flexyadmin/assets/scss/_layout.scss
@@ -29,7 +29,6 @@
   padding:0 .5rem 0 0;
   background-color:$gray-lightest;
   border-bottom:solid 1px $gray-lighter;
-  height:$font-size-root*3.25;
   .nav {padding-top:.1rem;}
 }
 
@@ -53,7 +52,7 @@
 
 /* CONTENT */
 #content {
-  margin:1rem 0px 0px;
+  margin:1.35rem 0px 0px;
 }
 #flexy-menu-side {padding-left:0;}
 #main {
@@ -97,8 +96,8 @@
     left:50%;
     top:50%;
     font-size:5rem;
-    color:$brand-warning;
-    text-shadow:0px 0px .5rem $gray;
+    color:$gray-light;
+    text-shadow:0px 0px .5rem $body-bg;
   }
 }
 
