--- a/sys/flexyadmin/views/help/01__Over_Help.html
+++ b/sys/flexyadmin/views/help/01__Over_Help.html
@@ -1,24 +1,19 @@
-Over Help
----------
-
-De beheerder van deze website: dat ben jijzelf. Dit is een handleiding bij dat beheer.
 Je vindt hierin antwoord op vragen als:
 
 - Hoe kan ik tekst, foto’s en links plaatsen?
 - Hoe kan ik het menu wijzigen?
 - Hoe kan ik filmpjes plaatsen?
 
-Het beheer van websites gebeurt via een zogenaamd Content Management Systeem (CMS). Jouw site gebruikt FlexyAdmin.
-Het is gebruiksvriendelijk en ontworpen voor zowel standaardsites als complexere sites.
-
-Deze handleiding maakt je daarin wegwijs. Hij is van toepassing op een gewone standaardsite..
+Deze handleiding is van toepassing op een gewone standaardsite.
 Maar ook als je een complexere site hebt, geeft de handleiding de nodige basisinformatie om uit de voeten te kunnen.
 
 Mocht je er desondanks toch niet uitkomen, neem dan gerust contact op met de bouwer van je website.
 
-Pop-up help
--------
+NB Deze handleiding is nog niet up to date met de nieuwste versie!
 
+<!-- Pop-up help
+-------
+TODO:
 Uitleg verschijnt binnen FlexyAdmin hier en daar ook in een pop-upvenstertje.
 
 Dat werkt als volgt:
@@ -33,4 +28,4 @@ Een voorbeeld:
 2. Ga met de cursor staan op **Omschrijving**
 3. Er verschijnt een vraagteken en daarna een venster met extra informatie
 
-<img src="sys/flexyadmin/assets/img/help/popup_2.gif" />
+<img src="sys/flexyadmin/assets/img/help/popup_2.gif" /> -->
