--- a/sys/flexyadmin/views/help/02__Instellingen.html
+++ b/sys/flexyadmin/views/help/02__Instellingen.html
@@ -1,7 +1,7 @@
-Site
+Instellingen
 ----
 
-Bij **Site** vind je instellingen voor de hele site, onder andere:
+Hier vind je instellingen voor de hele site, onder andere:
 
 - Titel van de site
 - Je e-mailadres
@@ -11,7 +11,7 @@ De bouwer van je site kan hier nog meer velden aan toevoegen als dat nodig is vo
 
 Hieronder volgt per veld een uitleg.
 
-1. Klik op **Site**
+1. Klik op **Instellingen**
 2. Je ziet nu onderstaand scherm
 3. Vul bij elk veld de instellingen van je site in
 
