--- a/sys/flexyadmin/views/help/99__Colofon.html
+++ b/sys/flexyadmin/views/help/99__Colofon.html
@@ -1,18 +1,17 @@
 Met dank aan
 ------------
 
-- <a href="http://www.arnoudvandenheuvel.nl/" target="_blank">Arnoud van den Heuvel</a> voor de flexibele blokjes
-- <a href="http://www.nervo.nl/" target="_blank">Emanuel Nervo</a> e.a. voor zijn vele tips en gevonden bugs
-- <a href="http://www.jeroenjager.nl/" target="_blank">Jeroen Jager</a> voor de eerste opzet van deze **Help**
-- <a href="http://www.tekstbureauphilo.nl/" target="_blank">Liesbeth Simpelaar</a> voor tips en eindredactie van deze **Help**
+- <a href="http://www.arnoudvandenheuvel.nl/" target="_blank">Arnoud van den Heuvel</a>
+- <a href="http://www.nervo.nl/" target="_blank">Emanuel Nervo</a>
+- <a href="http://www.jeroenjager.nl/" target="_blank">Jeroen Jager</a>
+- <a href="http://www.tekstbureauphilo.nl/" target="_blank">Liesbeth Simpelaar</a>
 
-FlexyAdmin maakt gebruik van
+FlexyAdmin maakt gebruik van de volgende Open-Source Libraries
 ----------------------------
 
-- <a href="http://codeigniter.com/" target="_blank">Code Igniter</a> - Open-source PHP Library
-- <a href="http://jquery.com/" target="_blank">jQuery</a> (en jQuery UI) - Open-source JavaScript Library
+- <a href="http://codeigniter.com/" target="_blank">Code Igniter</a> - PHP Framework
+- <a href="http://vuejs.org/" target="_blank">VueJS</a> - JavaScript Library
 - <a href="http://tinymce.moxiecode.com/" target="_blank">TinyMCE</a> - HTML editor
-
 
 (c) <a href="http://www.jandenbesten.net" target="_blank">Jan den Besten</a>
 
