Subform reloading options & selecting new item
Former-commit-id: 99ceb6adf78295e857e3d1b896c82c5c0c34b10d

--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -17,6 +17,13 @@
   padding-bottom:.25rem;
 }
 
+.form-group.row {
+  .col-md-1 {
+    padding-top:.5rem;
+    * {float:right;}
+  }
+}
+
 // Input Border color
 .form-group.row {
   input, select, textarea, .mce-tinymce, .form-control, .mediapicker {
