--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -313,4 +313,12 @@
   display:none;
 }
 
+
+
+/* GRAPH */
+.graph {
+  .bar {padding:0;}
+  .graph-bar {background-color:$brand-warning;}
+  .vertical-text {}
+}
   
