Form: Radio buttons
Former-commit-id: 5f05b79fb55c4b4aa5492d94058c972729c87762

--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -67,6 +67,10 @@ select.form-control:not([size]):not([multiple]) {
   margin-left:0;
 }
 
+.form-check-label {
+  padding-left:0;
+}
+
 // Validation
 .form-group.has-danger {
   background-color:lighten($brand-warning,30%)!important;
