TinyMCE plugin test & some small styling issues
Former-commit-id: c7f29db379255cbfc93ad2a2a72ddbcc18d7ebf2

--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -96,7 +96,7 @@ textarea {
   border-radius:$border-radius;
 }
 body.mce-fullscreen .mce-tinymce{
-  z-index:9999999;
+//  z-index:9999999;
 //  margin-top:$font-size-root*4!important;
 }
 
