--- a/sys/flexyadmin/assets/scss/_layout.scss
+++ b/sys/flexyadmin/assets/scss/_layout.scss
@@ -64,17 +64,17 @@
 #content-home {
   .nav-item {
     display:inline-block;
-    height:3rem;
+//    height:3rem;
     width:auto;
     margin-right:2rem;
     .flexy-button {
       float:left;
-      margin-right:1rem;
+      margin-right:.5rem;
     }
     .nav-title {
       display:inline-block;
       margin:0;
-      padding-top:.5rem;
+//      padding-top:.5rem;
     }
   }
 }
