--- a/sys/flexyadmin/assets/scss/_defaults.scss
+++ b/sys/flexyadmin/assets/scss/_defaults.scss
@@ -66,9 +66,17 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
   
   .card {
     >.card-header {
-      padding:.25rem;
-      background-color:$body-bg;
-      color:$brand-primary;
+      padding:.25rem .5rem;
+      h1 {
+        font-weight:normal;
+        font-size:$font-size-h2;
+        padding-top:.125rem;
+      }
+    }
+    >.card-block {
+      overflow:hidden;
+      padding:.25rem .5rem;
+      .form-group {margin-bottom:.5rem;}
     }
   }
 }
