Rewrite data->find() & some styling
Former-commit-id: 5ab0fe247d5c2b51c3707087d3d623e27f5b2a65

--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -148,6 +148,7 @@
      max-width:250px;
      input {padding:0;float:left;width:100%;color:$brand-primary;}
    }
+   td.grid-cell-full-show {max-width:none;}
    td.grid-cell-type-color {max-width:0;min-width:5rem;}
    td.grid-cell-type-checkbox {text-align:center;}
    td.grid-cell-editable {cursor:pointer;}
