Bezig met formaat table aanpassen tbv pagination
Former-commit-id: 68bfa19e29d9c0e56bd814b87e435295fa3267b5

--- a/sys/flexyadmin/assets/scss/_layout.scss
+++ b/sys/flexyadmin/assets/scss/_layout.scss
@@ -63,11 +63,11 @@
 
 
 /* CONTENT */
-#content {
+#row {
   margin:0.75rem 0px 0px;
 }
 #flexy-menu-side {padding-left:0;}
-#main {
+#content {
   padding:0 .5rem .5rem;
   >.card {margin-top:1rem}
   >.card:first-child {margin:0}
