--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -163,7 +163,7 @@
      padding:.35rem .35rem;
      .actions {
        float:left;
-       margin-top:.25rem;
+//       margin-top:.25rem;
        margin-right:1rem;
      }
    }
