Vue cloaks & once

--- a/sys/flexyadmin/assets/scss/_defaults.scss
+++ b/sys/flexyadmin/assets/scss/_defaults.scss
@@ -81,6 +81,11 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
   }
 }
 
+// VUE
+[v-cloak] {
+  display: none;
+}
+
 
 /* Responsive */
 
