--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -139,6 +139,9 @@ body.mce-fullscreen .mce-tinymce{
 
 
 // DatePicker overrides
+.datepicker {
+  height:1.8rem;
+}
 .form-control.datepicker-input {
   width:7rem;
   margin-bottom:0;
