--- a/sys/flexyadmin/assets/scss/_form.scss
+++ b/sys/flexyadmin/assets/scss/_form.scss
@@ -216,3 +216,32 @@ body.mce-fullscreen .mce-tinymce{
 
 
 
+// VSELECT
+.vselect {
+  position:relative!important;
+  margin-left:0;
+  
+  button.dropdown-toggle {
+    padding:.25rem .25rem 0 .25rem;
+  }
+  .selected-option {
+    display:block;
+    float:left;
+    padding:.25rem;
+    margin:0 .25rem .25rem 0;
+    border:solid 1px $brand-primary;
+    border-radius:$border-radius;
+  }
+  
+  ul.dropdown-menu {
+    width:100%;
+    li {
+      padding:.2rem .5rem;
+    }
+  }
+  
+}
+
+
+
+
